--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4925,7 +4925,7 @@ a.list-group-item.active > .badge,
   line-height: 2.1428571435;
   /*color: inherit;
   background-color: #eeeeee;*/
-  background-image: url("../images/rd.png");
+  background-image: url("../images/rdGray.png");
   background-position: center;
 }
 
