--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -300,7 +300,7 @@ html {
 }
 
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 14px;
   line-height: 1.428571429;
   color: #333333;
@@ -4183,7 +4183,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 
 .navbar-brand {
   float: left;
-  padding: 8px 15px;
+  padding: 10px 15px;
   font-size: 18px;
   line-height: 20px;
 }
@@ -4925,7 +4925,7 @@ a.list-group-item.active > .badge,
   line-height: 2.1428571435;
   /*color: inherit;
   background-color: #eeeeee;*/
-  background-image: url("../images/rdGray.png");
+  background-image: url("../images/rdGrayMB.png");
   background-position: center;
 }
 
@@ -4952,7 +4952,13 @@ a.list-group-item.active > .badge,
     padding-left: 60px;
   }
   .jumbotron h1 {
-    font-size: 63px;
+    font-size: 2em;
+  }
+
+  .jumbotron p{
+    font-size: 18px;
+    width: 600px;
+    height: 80px;
   }
 }
 
