--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4923,9 +4923,10 @@ a.list-group-item.active > .badge,
   font-size: 21px;
   font-weight: 200;
   line-height: 2.1428571435;
-  /*color: inherit;
-  background-color: #eeeeee;*/
+  /*color: inherit;*/
+  background-color: #f0f0f0;
   background-image: url("../images/rdGrayMB.png");
+  background-repeat: no-repeat;
   background-position: center;
 }
 
