--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1077,13 +1077,15 @@ pre code {
   .col-md-3,
   .col-md-4,
   .col-md-5,
-  .col-md-6,
   .col-md-7,
   .col-md-8,
   .col-md-9,
   .col-md-10,
   .col-md-11 {
     float: left;
+  }
+  .col-md-6{
+    margin: 0 auto;
   }
   .col-md-1 {
     width: 8.333333333333332%;
