--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1079,7 +1079,6 @@ pre code {
   .col-md-5,
   .col-md-7,
   .col-md-8,
-  .col-md-9,
   .col-md-10,
   .col-md-11 {
     float: left;
@@ -1087,6 +1086,10 @@ pre code {
   .col-md-6{
     margin: 0 auto;
   }
+  .col-md-9{
+    margin: 0 auto;
+  }
+
   .col-md-1 {
     width: 8.333333333333332%;
   }
@@ -1112,7 +1115,7 @@ pre code {
     width: 66.66666666666666%;
   }
   .col-md-9 {
-    width: 75%;
+    width: 65%;
   }
   .col-md-10 {
     width: 83.33333333333334%;
@@ -4074,6 +4077,12 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
 }
 
+.navbar-collapse-mini{
+  position:relative;
+  text-align:left;
+  margin:0 auto;
+}
+
 .navbar-collapse {
   max-height: 340px;
   padding-right: 15px;
@@ -4229,6 +4238,42 @@ textarea.input-group-sm > .input-group-btn > .btn {
     display: none;
   }
 }
+
+
+.navbar-nav-mini {
+  margin:0px auto;
+}
+.navbar-nav-mini > li > a {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  line-height: 20px;
+}
+
+@media (max-width: 767px) {
+  .navbar-nav-mini .open .dropdown-menu {
+    position: static;
+    float: none;
+    width: auto;
+    margin-top: 0;
+    background-color: transparent;
+    border: 0;
+    box-shadow: none;
+  }
+  .navbar-nav-mini .open .dropdown-menu > li > a,
+  .navbar-nav-mini .open .dropdown-menu .dropdown-header {
+    padding: 5px 15px 5px 25px;
+  }
+  .navbar-nav-mini .open .dropdown-menu > li > a {
+    line-height: 20px;
+  }
+  .navbar-nav-mini .open .dropdown-menu > li > a:hover,
+  .navbar-nav-mini .open .dropdown-menu > li > a:focus {
+    background-image: none;
+  }
+}
+
+
+
 
 .navbar-nav {
   margin: 7.5px -15px;
